--- a/angular/src/app/components/reload/reload.component.html
+++ b/angular/src/app/components/reload/reload.component.html
@@ -2,9 +2,9 @@
     <h1>RELOAD.. .</h1>
     <div class="meetuos">
         <div>
-            <p>Para a retomada da comunidade estamos preparando algumas novidades. Além dos meetups vamos promover semanalmente um videocast com convidados especiais. <font color="#FC4FF6">Fique ligado </font> 🤟</p>
+            <p class="resume">Para a retomada da comunidade estamos preparando algumas novidades. Além dos meetups vamos promover semanalmente um videocast com convidados especiais. <font color="#FC4FF6">Fique ligado </font> 🤟</p>
     
-            <button>Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
+            <button class="btn1">Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
         </div>
 
         <div>
@@ -22,5 +22,6 @@
             </div>
             <p>Como um programa de rádio, porém o conteúdo é sob demanda e pode ser ouvido no momento em que o ouvinte quiser. O formato tem uma alta potência de comunicação, que pode levar informação, educação, entretenimento e mais, ou seja: não existe limite para a criatividade. <font color="#7589FF">Faça parte da comunidade.</font> </p>
         </div>
+        <button class="btn2">Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
         <h3>RELOAD.. .</h3>
     </div> 
