--- a/angular/src/app/components/footer/footer.component.html
+++ b/angular/src/app/components/footer/footer.component.html
@@ -1,9 +1,12 @@
 <div class="footer">
-    <img src="../../../assets/images/devpp-logotipo.svg" alt="">
-    <div class="flex">
-        <p class="cod-conduct">Código de Conduta</p>
-        <img class="" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
+    <div>
+        <img src="../../../assets/images/devpp-logotipo.svg" alt="">
+        <div class="flex">
+            <p class="cod-conduct">Código de Conduta</p>
+            <img class="arrow1" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
+        </div>
+        <p class="community">Comunidade de Desenvolvedores de Presidente Prudente e região.</p>
+        <img class="arrow2" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
+        <p class="copyright">© DEV PP 2017 / 2022. Todos os direitos reservados.</p>
     </div>
-    <p class="community">Comunidade de Desenvolvedores de Presidente Prudente e região.</p>
-    <p class="copyright">© DEV PP 2017 / 2022. Todos os direitos reservados.</p>
 </div> 
