--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -20,9 +20,11 @@
         }
 
         img{
-            width: 32px;
+             width: 32px;
              margin-top: -15px;
              margin-left: 12px;
+             height: 56px;
+             margin-bottom: 10px;
         }
     }
 
@@ -30,10 +32,10 @@
         font-size: 18px;
     }
 
-    img{
-        height: 56px;
-        margin-bottom: 10px;
+    .arrow2{
+        display: none;
     }
+
     .copyright{
         color: #514E58;
         font-size: 18px;
@@ -42,14 +44,59 @@
 }
 
 @media screen and (max-width: 600px) {
+    img{
+        margin-left: 15%;
+    }
+
     .footer{
         padding-left: 24px;
         grid-template-columns: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
         .flex{
             display: contents;
+            
             .cod-conduct{
                 display: none;
             }
+        }
+
+        .arrow1{
+            display: none;
+        }
+
+        .arrow2{
+            display: block;
+            margin-bottom: 48px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin-left: 45%;
+
+        }
+
+        .community{
+            font-size: 16px;
+            margin-bottom: 60px;
+            width: 312px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+    
+        .copyright{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            color: #514E58;
+            font-size: 14px;
+            margin-bottom: 32px;
         }
     }
 }
