--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -19,8 +19,14 @@
             font-size: 18px;
         }
 
+        .devpp{
+            font-weight: 700;
+            font-size: 32px;
+            line-height: 42px;
+        }
+
         img{
-             width: 32px;
+            height: 32px;
              margin-top: -15px;
              margin-left: 12px;
              height: 56px;
@@ -44,10 +50,6 @@
 }
 
 @media screen and (max-width: 600px) {
-    img{
-        margin-left: 15%;
-    }
-
     .footer{
         padding-left: 24px;
         grid-template-columns: auto;
@@ -61,21 +63,33 @@
             .cod-conduct{
                 display: none;
             }
+
+            .arrow2{
+                display: block;
+                margin-bottom: 48px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                margin-left: 45%;
+                width: 32px;
+            }
+            img{
+                margin-left: 152px;
+            }
+            p{
+                font-weight: 700;
+                font-size: 32px;
+                line-height: 42px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+            }
         }
 
         .arrow1{
             display: none;
-        }
-
-        .arrow2{
-            display: block;
-            margin-bottom: 48px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            margin-left: 45%;
-
         }
 
         .community{
@@ -97,6 +111,7 @@
             color: #514E58;
             font-size: 14px;
             margin-bottom: 32px;
+            text-align: center;
         }
     }
 }
