--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="content">
     <devpp-hero></devpp-hero>
     <app-reload></app-reload> 
     <app-event-cards></app-event-cards>
