--- a/angular/src/app/components/event-cards/event-cards.component.html
+++ b/angular/src/app/components/event-cards/event-cards.component.html
@@ -1,9 +1,9 @@
 <div class="event-card">
     <h1>PRÓXIMOS EVENTOS</h1>
-    <div class="container">
+    <div class="content">
         <div class="card">
             <h3>Meetup</h3>
-            <div class="container-card">
+            <div class="content-card">
                 <p class="data">21/09</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="flex">
@@ -18,7 +18,7 @@
         </div>
         <div class="card">
             <h3>Meetup</h3>
-            <div class="container-card">
+            <div class="content-card">
                 <p class="data">18/10</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="flex">
@@ -33,7 +33,7 @@
         </div>
         <div class="card">
             <h3>Meetup</h3>
-            <div class="container-card">
+            <div class="content-card">
                 <p class="data">16/11</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="flex">
