--- a/angular/src/app/@thinkam/pilot/menu/menu.component.html
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg pilot-navbar">
+<nav class="navbar navbar-expand-lg bg-black pilot-navbar">
   <div class="pilot-container">
     <a class="pilot-navbar-brand" routerLink="/">
       <img *ngIf="logoSrc" title="{{logoTitle}}" [src]="logoSrc" height="{{logoHeight}}" alt="{{logoAlt}}" />
@@ -23,10 +23,10 @@
       </ul>
       
       <div class="social-icons">
-        <img src="../../../../assets/images/Logo_one_color/white/youtube.svg" alt="">
-        <img src="../../../../assets/images/Logo_one_color/white/fb.svg" alt="">
-        <img src="../../../../assets/images/Logo_one_color/white/github.svg" alt="">
-        <img src="../../../../assets/images/Logo_one_color/white/discord.svg" alt="">
+        <a class="social-icon" href="https://www.youtube.com/channel/UC9QAZYQ0fHLERa6PLN4GWyw"><img src="../../../../assets/images/Logo_one_color/white/youtube.svg" alt=""></a>
+        <a class="social-icon" href="https://www.facebook.com/groups/770159453169235/"><img src="../../../../assets/images/Logo_one_color/white/fb.svg" alt=""></a>
+        <a class="social-icon" href="https://github.com/dev-pp/meetup"><img src="../../../../assets/images/Logo_one_color/white/github.svg" alt=""></a>
+        <a class="social-icon" href="https://discord.gg/mqR7r8pUp9"><img src="../../../../assets/images/Logo_one_color/white/discord.svg" alt=""></a>
       </div>
     </div>
   </div>
