--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.html
@@ -1,7 +1,7 @@
 <div class="be-part">
     <div class="be-part-container">
         <h2>SOMOS MAIS DE</h2>
-        <h1>300</h1>
+        <img src="../../../assets/images/300.png" alt="">
         <h3>Desenvolvedoras e desenvolvedores engajados.</h3>
         <div class="center">
             <button>Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
