--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -49,7 +49,7 @@
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     .footer{
         padding-left: 24px;
         grid-template-columns: auto;
@@ -86,32 +86,32 @@
                 justify-content: center;
                 align-items: center;
             }
+            .community{
+                font-size: 16px;
+                margin-bottom: 60px;
+                line-height: 130%;
+                width: 312px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+            }
+            .copyright{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                color: #514E58;
+                font-size: 14px;
+                margin-bottom: 32px;
+                text-align: center;
+            }
         }
 
         .arrow1{
             display: none;
         }
-
-        .community{
-            font-size: 16px;
-            margin-bottom: 60px;
-            width: 312px;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
     
-        .copyright{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            color: #514E58;
-            font-size: 14px;
-            margin-bottom: 32px;
-            text-align: center;
-        }
     }
 }
