--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -15,8 +15,9 @@
         margin-bottom: 104px;
 
         p{
-            width: 383px;
+            width: 603px;
             font-size: 18px;
+            margin-top: -5px;
         }
 
         .devpp{
@@ -26,11 +27,15 @@
         }
 
         img{
+            margin-right: 22px;
             height: 32px;
-             margin-top: -15px;
-             margin-left: 12px;
-             height: 56px;
-             margin-bottom: 10px;
+            margin-top: -15px;
+            margin-left: 12px;
+            height: 56px;
+            margin-bottom: 10px;
+        }
+        .arrow1{
+            height: 32px;
         }
     }
 
