--- a/angular/src/app/@thinkam/pilot/menu/menu.component.html
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.html
@@ -21,13 +21,13 @@
             <i [ngClass]="socialNetwork.icon"></i>
         </li>
       </ul>
-      
       <div class="social-icons">
-        <a class="social-icon" href="https://www.youtube.com/channel/UC9QAZYQ0fHLERa6PLN4GWyw"><img src="../../../../assets/images/Logo_one_color/white/youtube.svg" alt=""></a>
-        <a class="social-icon" href="https://www.facebook.com/groups/770159453169235/"><img src="../../../../assets/images/Logo_one_color/white/fb.svg" alt=""></a>
-        <a class="social-icon" href="https://github.com/dev-pp/meetup"><img src="../../../../assets/images/Logo_one_color/white/github.svg" alt=""></a>
-        <a class="social-icon" href="https://discord.gg/mqR7r8pUp9"><img src="../../../../assets/images/Logo_one_color/white/discord.svg" alt=""></a>
+        <a target="_blank" class="social-icon" href="https://www.youtube.com/channel/UC9QAZYQ0fHLERa6PLN4GWyw"><img src="../../../../assets/images/Logo_one_color/white/youtube.svg" alt=""></a>
+        <a target="_blank" class="social-icon" href="https://www.facebook.com/groups/770159453169235/"><img src="../../../../assets/images/Logo_one_color/white/fb.svg" alt=""></a>
+        <a target="_blank" class="social-icon" href="https://github.com/dev-pp/meetup"><img src="../../../../assets/images/Logo_one_color/white/github.svg" alt=""></a>
+        <a target="_blank" class="social-icon" href="https://discord.gg/Yp5dns5gK5"><img src="../../../../assets/images/Logo_one_color/white/discord.svg" alt=""></a>
       </div>
+      <img class="none" src="../../../../assets/images/background-image/LooperBG.png" alt="">
     </div>
   </div>
 </nav>
