--- a/angular/src/app/@thinkam/pilot/menu/menu.component.scss
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.scss
@@ -1,4 +1,10 @@
 .pilot-navbar {
+    button{
+        display: none;
+    }
+    .none{
+        display: none;
+    }
     .social-icons{
         img{
             width: 20px;
@@ -57,11 +63,30 @@
 
 @media screen and (max-width: 800px) {
     .pilot-navbar {
-        background-color: black;
+        .none{
+            display: block;
+            width: 100%;
+            margin-top: -70%;
+        }
+        .social-icons{
+            display: flex;
+            flex-direction: row;
+        
+            .social-icon{
+                background: #201E25;
+                width: 48px;
+                height: 48px;
+                margin-top: 50px;
+                margin-right: 30px;
+                padding: 0;
+            }
+        }
         .pilot-container {
+            width:  100%;
             button{
-                margin-top: 32px;
-                margin-left: 118px;
+                margin-top: 18px;
+                display:grid;
+                margin-left: 80%;
             }
             .pilot-navbar-nav{
                 .pilot-nav-item {
@@ -69,7 +94,7 @@
                         color: white;
                         width: 200px;
                         padding: 0;
-                        margin-left: -100px;
+                        margin-left: -200px;
                         text-align: left;
                     }
                     .cta{
@@ -83,8 +108,10 @@
                     margin: 14px;
                     margin-left: 24px;
                 }
+                .btn-nav{
+                    float: right;
+                }
             }
         }
     }
-
 }
