--- a/angular/src/app/@thinkam/pilot/menu/menu.component.html
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-black pilot-navbar">
+<nav class="navbar navbar-expand-lg pilot-navbar">
   <div class="pilot-container">
     <a class="pilot-navbar-brand" routerLink="/">
       <img *ngIf="logoSrc" title="{{logoTitle}}" [src]="logoSrc" height="{{logoHeight}}" alt="{{logoAlt}}" />
