--- a/angular/src/app/components/hero/hero.component.scss
+++ b/angular/src/app/components/hero/hero.component.scss
@@ -1,5 +1,5 @@
 #home {
-    background-image: url("/assets/images/devpp-bg-hero.png");
+    background-image: url("../../../assets/images/background-image/BG.png");
     background-repeat: no-repeat;
     background-size: cover;
 
