--- a/angular/src/app/components/reload/reload.component.scss
+++ b/angular/src/app/components/reload/reload.component.scss
@@ -1,6 +1,8 @@
 .reload-app{
-    padding-left: 240px;
-
+    
+    .reload-app-content{
+        padding-left: 240px;
+    }
     h1{
         background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 17.78%);
         -webkit-background-clip: text;
