--- a/angular/src/app/@thinkam/pilot/menu/menu.component.scss
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.scss
@@ -1,4 +1,6 @@
 .pilot-navbar {
+    background-color:  #010814;
+
     button{
         display: none;
     }
@@ -71,6 +73,7 @@
         .social-icons{
             display: flex;
             flex-direction: row;
+
         
             .social-icon{
                 background: #201E25;
@@ -79,6 +82,9 @@
                 margin-top: 50px;
                 margin-right: 30px;
                 padding: 0;
+                img{
+                    filter: opacity(0.5) drop-shadow(0 0 0 rgb(47, 64, 249)); 
+                }
             }
         }
         .pilot-container {
