--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
@@ -1,13 +1,14 @@
 .be-part{
+    background-image: url("../../../assets/images/background-image/blur.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    .be-part-container{
-        background-image: url("../../../assets/images/background-image/BGS.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+    // .be-part-container{
+    // }
     h2{
         font-weight: 700;
         font-size: 40px;
@@ -16,9 +17,10 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
+        margin-bottom: 48px;
     }
     h1{
-        margin-top: -80px;
+        margin-top: 80px;
         font-size: 500px;
         background: linear-gradient(91.06deg, #FF1CF7 2.26%, #00F0FF 100%);
         -webkit-background-clip: text;
@@ -27,7 +29,7 @@
         text-align: center;
     }
     h3{
-        margin-top: -80px;
+        margin-top: 80px;
         margin-bottom: 40px;
         font-family: 'Chakra Petch';
         font-style: normal;
