--- a/angular/src/app/components/event-cards/event-cards.component.scss
+++ b/angular/src/app/components/event-cards/event-cards.component.scss
@@ -22,7 +22,7 @@
         margin-left: 240px;
         margin-top: -90px;
         .card{
-            background-color: black;
+            background-color:  #010814;
             width: 440px;
             margin-bottom: 40px;
             h3{
