--- a/angular/src/app/components/event-cards/event-cards.component.html
+++ b/angular/src/app/components/event-cards/event-cards.component.html
@@ -19,7 +19,7 @@
         <div class="card">
             <h3>Meetup</h3>
             <div class="content-card">
-                <p class="data">18/10</p>
+                <p class="data-mid">18/10</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="flex">
                     <img src="assets/images/ping_map.svg" alt="ping_map">
@@ -48,7 +48,6 @@
         </div>
     </div>
         <div class="warning">
-            <img src="assets/images/exclamacao.svg" alt="ping_map">
-            <p>⠀Os encontros presenciais podem ter vagas limitadas. Garanta sua participação.</p>
+            <p><img src="assets/images/exclamacao.svg" alt="ping_map">⠀Os encontros presenciais podem ter vagas limitadas. Garanta sua participação.</p>
         </div>
 </div> 
