--- a/angular/src/app/components/hero/hero.component.scss
+++ b/angular/src/app/components/hero/hero.component.scss
@@ -2,7 +2,7 @@
     background-image: url("../../../assets/images/background-image/BG.png");
     background-repeat: no-repeat;
     background-size: cover;
-
+    height: 1080px;
     .content {
         text-align: center;
         width: 100%;
