--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
@@ -7,8 +7,14 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    // .be-part-container{
-    // }
+    .be-part-container{
+        .aa{
+            img{
+                padding: 12px;
+                width: 100%;
+            }
+        }
+    }
     h2{
         font-weight: 700;
         font-size: 40px;
