--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -67,6 +67,17 @@
         }
     }
 
+@media screen and (max-width: 1600px) {
+    .partners{
+        .partners-container{
+            .grid{
+                    display: grid;
+                    grid-template-columns: auto auto;
+            }
+        }
+    }
+}
+
 @media screen and (max-width: 800px) {
     .partners{
         .partners-container{
