--- a/angular/src/app/components/reload/reload.component.html
+++ b/angular/src/app/components/reload/reload.component.html
@@ -25,5 +25,5 @@
             </div>
             <button class="btn2">Faça parte da comunidade <img src="../../../assets/images/arrow-right.svg" alt=""></button>
         </div>
-    <img src="../../../assets/images/Logo_one_color/RELOAD.. ..png" alt="">
+    <img class="reload-img" src="../../../assets/images/Logo_one_color/RELOAD.. ..png" alt="">
 </div> 
