ajustes para tornar mais responsivo

--- a/angular/src/app/components/event-cards/event-cards.component.html
+++ b/angular/src/app/components/event-cards/event-cards.component.html
@@ -6,7 +6,7 @@
             <div class="content-card">
                 <p class="data">21/09</p>
                 <p class="hour">ÀS 20H HORAS</p>
-                <div class="flex">
+                <div class="address flex">
                     <img src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Foregon</p>
@@ -21,7 +21,7 @@
             <div class="content-card">
                 <p class="data-mid">18/10</p>
                 <p class="hour">ÀS 20H HORAS</p>
-                <div class="flex">
+                <div class="address flex">
                     <img src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Inova Prudente</p>
@@ -36,7 +36,7 @@
             <div class="content-card">
                 <p class="data">16/11</p>
                 <p class="hour">ÀS 20H HORAS</p>
-                <div class="flex">
+                <div class="address flex">
                     <img src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Inova Prudente</p>
