--- a/angular/src/app/components/reload/reload.component.scss
+++ b/angular/src/app/components/reload/reload.component.scss
@@ -1,6 +1,6 @@
 .reload-app{
     .reload-app-content{
-        padding-left: 240px;
+        padding-left: 6vw;
     }
     h1{
         background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 17.78%);
@@ -46,7 +46,7 @@
     p{
         color: #FFF;
         width: 530px;
-        font-size: 16px;
+        font-size: 1rem;
         margin-top: 21px;
         line-height: 33px;
         font-weight: 400;
