--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <!--  --><devpp-hero></devpp-hero>
+    <devpp-hero></devpp-hero>
     <app-reload></app-reload> 
     <app-event-cards></app-event-cards>
     <app-digital-media></app-digital-media>
