--- a/angular/src/app/@thinkam/pilot/menu/menu.component.scss
+++ b/angular/src/app/@thinkam/pilot/menu/menu.component.scss
@@ -1,28 +1,34 @@
 .pilot-navbar {
-    background-color:  #010814;
+    background-color: #010814;
     width: 100%;
-    button{
+    button {
         display: none;
     }
-    .none{
+    .none {
         display: none;
     }
-    .social-icons{
-        img{
+    .social-icons {
+        img {
             width: 20px;
             margin: 14px;
         }
-        .social-icon{
-            padding-left: 14px;
-        }
     }
     .pilot-container {
+        width: 100%;
+        position: relative;
+
+        #navbarNav {
+            position: relative;
+            float: right;
+            margin-right: 6vw;
+        }
+
         .pilot-navbar-brand {
             display: block;
             float: left;
 
             img {
-                margin-left: 240px;
+                margin-left: 6vw;
                 margin-top: 22px;
                 margin-bottom: 26px;
             }
@@ -34,24 +40,27 @@
             padding: 0;
 
             .pilot-nav-item:first-child {
-                margin-left: 272px;
+                margin-left: 6vw;
+            }
+            .pilot-nav-item:last-child {
+                width: 124px;
             }
             .pilot-nav-item {
                 float: left;
                 margin-top: 22px;
                 margin-bottom: 26px;
-                margin-left: 40px;
+                margin-left: 3vw;
 
                 .pilot-nav-link {
                     display: block;
                     color: white;
                     text-align: center;
-                    padding: 14px 16px;
+                    padding: 0.4rem;
                     text-decoration: none;
                 }
 
-                .cta{
-                    color: #FC4FF6
+                .cta {
+                    color: #fc4ff6;
                 }
 
                 .pilot-nav-link:hover {
@@ -62,42 +71,52 @@
     }
 }
 
+@media screen and (min-width: 801px) and (max-width: 1024px) {
+    .pilot-navbar {
+        .pilot-container {
+            .pilot-navbar-nav {
+                .pilot-nav-item {
+                    margin-left: 0.1vw;
+                }
+            }
+        }
+    }
+}
 
 @media screen and (max-width: 800px) {
     .pilot-navbar {
-        .none{
+        .none {
             display: block;
             width: 100%;
             margin-top: -70%;
         }
-        .social-icons{
+        .social-icons {
             display: flex;
             flex-direction: row;
 
-            .social-icon:first-child{
+            .social-icon:first-child {
                 margin-left: 20px;
             }
-            .social-icon{
-                background: #201E25;
+            .social-icon {
+                background: #201e25;
                 width: 48px;
                 height: 48px;
                 margin-top: 50px;
                 margin-right: 30px;
                 padding: 0;
-                img{
-                    filter: opacity(0.7) drop-shadow(0 0 0 rgb(72, 93, 255)); 
+                img {
+                    filter: opacity(0.7) drop-shadow(0 0 0 rgb(72, 93, 255));
                 }
             }
-
         }
         .pilot-container {
-            width:  100%;
-            button{
+            width: 100%;
+            button {
                 margin-top: 18px;
-                display:grid;
+                display: grid;
                 margin-left: 80%;
             }
-            .pilot-navbar-nav{
+            .pilot-navbar-nav {
                 .pilot-nav-item {
                     .pilot-nav-link {
                         color: white;
@@ -106,18 +125,18 @@
                         margin-left: -200px;
                         text-align: left;
                     }
-                    .cta{
-                        color: #FC4FF6
+                    .cta {
+                        color: #fc4ff6;
                     }
                 }
             }
-            .pilot-navbar-brand{
-                img{
+            .pilot-navbar-brand {
+                img {
                     height: 40px;
                     margin: 14px;
                     margin-left: 24px;
                 }
-                .btn-nav{
+                .btn-nav {
                     float: right;
                 }
             }
