--- a/angular/src/app/components/hero/hero.component.scss
+++ b/angular/src/app/components/hero/hero.component.scss
@@ -25,7 +25,7 @@
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
                 padding-top: 48px;    
-                width: 1500px;
+                width: 96vw;
                 font-size: 64px;  
                 display: flex;
                 justify-content: center;
