--- a/angular/src/app/components/event-cards/event-cards.component.scss
+++ b/angular/src/app/components/event-cards/event-cards.component.scss
@@ -145,6 +145,7 @@ button {
 
 @media screen and (max-width: 800px) {
     .event-card {
+        margin-left: 2vw;
         h1 {
             background: linear-gradient(91.06deg, #ffffff 2.26%, #7589ff 70.78%);
             -webkit-background-clip: text;
