--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -1,4 +1,8 @@
 .partners{
+    *{
+        margin: 0;
+        padding: 0;
+    }
     .partners-container{
         padding-left: 240px;
         h1{
@@ -16,16 +20,20 @@
             display: grid;
             grid-template-columns: auto auto auto auto;
             margin-left: -20px;
+
             .card{
-                background-color: #201E25;
-                height: 152px;
-                width: 324px;
+                background-image: url(../../../assets/images/background-image/Group.png);
+                background-color: #010814;
+                margin: 1.7rem;
+                width: 100%;
+                height: 100%;
+                background-repeat: no-repeat;
+
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
-                border-radius:  0px 30px ;
-                margin: 20px 20px 20px 20px;
+                
                 color: white;
                 p{
                     text-transform: uppercase;
@@ -35,13 +43,14 @@
                     background-clip: text;
                     text-fill-color: transparent;
                     font-weight: 700;
-                    font-size: 24px;
+                    font-size: 1.5rem;
                     line-height: 130%;
                     letter-spacing: 0.16em;
+                    padding: 2rem;
                 }
-                // img{
-
-                // }
+                img{
+                    width: 70%;
+                }
             }
         }
     }
