--- a/angular/src/app/components/partners/partners.component.html
+++ b/angular/src/app/components/partners/partners.component.html
@@ -2,35 +2,29 @@
     <div class="partners-container">
         <h1>NOSSOS PARCEIROS</h1>
         <div class="grid">
-            <div class="card">	
-                <div class="card2">	
-                    <img src="../../../assets/images/Vector.svg" alt="">
-                </div>
+            <div class="card foregon">	
+                <img src="../../../assets/images/partnes/foregon.png" alt="">
             </div>
-            <div class="card">
-                <div class="card2">	
-                    <img src="../../../assets/images/fundacaoinovaprudente.svg" alt="">
-                </div>
+            <div class="card fip" >
+                <img src="../../../assets/images/partnes/inovaprudente.png" alt="">
             </div>
-            <div class="card">	
-                <div class="card2">	
-                    <p>novo parceiro</p>
-                </div>
+            <div class="card new-partner">	
+                <img src="../../../assets/images/partnes/newpartner.png" alt="">
             </div>
-            <div class="card">	
-                <p>novo parceiro</p>
+            <div class="card new-partner">	
+                <img src="../../../assets/images/partnes/newpartner.png" alt="">
             </div>
-            <div class="card">	
-                <p>novo parceiro</p>
+            <div class="card new-partner">	
+                <img src="../../../assets/images/partnes/newpartner.png" alt="">
             </div>
-            <div class="card">	
-                <p>novo parceiro</p>
+            <div class="card new-partner">	
+                <img src="../../../assets/images/partnes/newpartner.png" alt="">
             </div>
-            <div class="card">	
-                <p>novo parceiro</p>
+            <div class="card new-partner">	
+                <img src="../../../assets/images/partnes/newpartner.png" alt="">
             </div>
-            <div class="card">	
-                <p>novo parceiro</p>
+            <div class="card new-partner">	
+                <img src="../../../assets/images/partnes/newpartner.png" alt="">
             </div>
         </div>
     </div>
