--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -4,7 +4,7 @@
         padding: 0;
     }
     .partners-container{
-        padding-left: 22vw;
+        padding-left: 6.25rem;
         h1{
             letter-spacing: 0.16em;
             text-transform: uppercase;
@@ -22,39 +22,34 @@
             margin-left: -20px;
 
             .card{
+                width: 20.563rem;
+                height: 9.5rem;
                 background-image: url(../../../assets/images/background-image/Group.png);
-                background-color: #010814;
-                margin: 1.7rem;
-                padding: 2rem;
+                background-color: transparent;
                 background-repeat: no-repeat;
-
-                .card2{
-                    width: 100%;
-                    height: 100%;
-                    background-repeat: no-repeat;
-
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    
-                    color: white;
-                    p{
-                        text-transform: uppercase;
-                        background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
-                        -webkit-background-clip: text;
-                        -webkit-text-fill-color: transparent;
-                        background-clip: text;
-                        text-fill-color: transparent;
-                        font-weight: 700;
-                        font-size: 1.5rem;
-                        line-height: 130%;
-                        letter-spacing: 0.16em;
-                        padding: 2rem;
-                    }
-                    img{
-                        width: 70%;
-                    }
+                align-items: center;
+                margin-bottom: 2.375rem;
+                img{
+                    width: 9.5rem;
+                    margin: auto;
+                }
+            }
+            .foregon{
+                img{
+                    width: 9.5rem;
+                    // margin: ;
+                }
+            }
+            .fip{
+                img{
+                    width: 12.75rem;
+                    // margin: ;
+                }
+            }
+            .new-partner{
+                img{
+                    width: 12.5rem;
+                    filter: opacity(0.4) drop-shadow(0 0 0 rgb(18,17,17));
                 }
             }
         }
@@ -86,6 +81,17 @@
         .partners-container{
             .grid{
                     display: grid;
+                    grid-template-columns: auto auto auto;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1174px) {
+    .partners{
+        .partners-container{
+            .grid{
+                    display: grid;
                     grid-template-columns: auto auto;
             }
         }
@@ -94,9 +100,12 @@
 
 @media screen and (max-width: 800px) {
     .partners{
+        // margin: auto;
+        // text-align: center;
         .partners-container{
-            padding-left: 3vw;
+            padding-left: 13.250vw;
             padding-right: 24px;
+
             h1{
                 background: linear-gradient(91.06deg, #ffffff 2.26%, #7589FF 80.78%);
                 -webkit-background-clip: text;
@@ -112,9 +121,8 @@
             .grid{
                     display: grid;
                     grid-template-columns: auto;
-                    .card{
-                        width: 90%;
-                    }
+                    text-align: center;
+                    // margin-left: 2.813rem;
                 }
             }
         }   
