todos os font-size com alteração de "px" pra "rem"

--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
@@ -17,7 +17,7 @@
     }
     h2{
         font-weight: 700;
-        font-size: 40px;
+        font-size: 2.5rem;
         text-align: center;
         background: linear-gradient(91.06deg, #FF1CF7 2.26%, #00F0FF 100%);
         -webkit-background-clip: text;
@@ -27,7 +27,7 @@
     }
     h1{
         margin-top: 80px;
-        font-size: 500px;
+        font-size: 31.25rem;
         background: linear-gradient(91.06deg, #FF1CF7 2.26%, #00F0FF 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -40,7 +40,7 @@
         font-family: 'Chakra Petch';
         font-style: normal;
         font-weight: 400;
-        font-size: 24px;
+        font-size: 1.5rem;
         line-height: 33px;
         /* identical to box height, or 138% */
         text-align: center;
@@ -61,7 +61,7 @@
             font-family: 'Chakra Petch';
             font-style: normal;
             font-weight: 500;
-            font-size: 18px;
+            font-size: 1.125rem;
             letter-spacing: 0.06em;
             color: #FFFFFF;
             padding: 16px;
@@ -78,7 +78,7 @@
     .be-part{
         h2{
             font-weight: 700;
-            font-size: 20px;
+            font-size: 1.25rem;
             text-align: center;
         }
         h1{
@@ -86,12 +86,12 @@
             margin: 0;
             margin-left: 50px;
             width: 321px;
-            font-size: 100px;
+            font-size: 6.25rem;
         }
         h3{
             margin-top: 0px;
             font-weight: 400;
-            font-size: 18px;
+            font-size: 1.125rem;
             line-height: 130%;
             text-align: center;
             letter-spacing: 0.72px;
@@ -102,7 +102,7 @@
                 padding: 16px 24px;
                 gap: 30px;
                 font-weight: 500;
-                font-size: 16px;
+                font-size: 1rem;
                 margin-bottom: 290px;
                 width: 312px;
                 height: 53px;
