--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -16,13 +16,13 @@
 
         p{
             width: 603px;
-            font-size: 18px;
+            font-size: 1.125rem;
             margin-top: -5px;
         }
 
         .devpp{
             font-weight: 700;
-            font-size: 32px;
+            font-size: 2rem;
             line-height: 42px;
         }
 
@@ -38,7 +38,7 @@
             height: 32px;
         }
         .community{
-            font-size: 18px;
+            font-size: 1.125rem;
             width: 680px;
         }
     }
@@ -51,7 +51,7 @@
 
     .copyright{
         color: #514E58;
-        font-size: 18px;
+        font-size: 1.125rem;
         margin-bottom: 50px;
     }
 }
@@ -86,7 +86,7 @@
             }
             p{
                 font-weight: 700;
-                font-size: 32px;
+                font-size: 2rem;
                 line-height: 42px;
                 display: flex;
                 flex-direction: row;
@@ -94,7 +94,7 @@
                 align-items: center;
             }
             .community{
-                font-size: 16px;
+                font-size: 1rem;
                 margin-bottom: 60px;
                 margin-left: 132px;
                 line-height: 130%;
@@ -111,7 +111,7 @@
                 justify-content: center;
                 align-items: center;
                 color: #514E58;
-                font-size: 14px;
+                font-size: 0.875rem;
                 margin-bottom: 32px;
                 text-align: center;
             }
