--- a/angular/src/app/components/hero/hero.component.scss
+++ b/angular/src/app/components/hero/hero.component.scss
@@ -26,7 +26,7 @@
                 background-clip: text;
                 padding-top: 48px;    
                 width: 96vw;
-                font-size: 64px;  
+                font-size: 4rem;  
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -60,7 +60,7 @@
         .content {
             h1 {
                 &.text-large {
-                    font-size: 28px;
+                    font-size: 1.75rem;
                     width: 300px;
                 }
             }
