--- a/angular/src/app/components/digital-media/digital-media.component.scss
+++ b/angular/src/app/components/digital-media/digital-media.component.scss
@@ -8,7 +8,7 @@
 
         h1{
             font-weight: 700;
-            font-size: 40px;
+            font-size: 2.5rem;
             line-height: 120%;
             letter-spacing: 0.16em;
             width: 330px;
@@ -23,7 +23,7 @@
         p{
             padding-top: 22px;
             font-weight: 400;
-            font-size: 16px;
+            font-size: 1rem;
             line-height: 140%;
             letter-spacing: 0.72px;
             width: 296px;
@@ -46,7 +46,7 @@
 
                 p{
                     text-transform: uppercase;
-                    font-size: 14px;
+                    font-size: 0.875rem;
                     width: 180px;
                     display: flex;
                     flex-direction: column;
