--- a/angular/src/app/components/event-cards/event-cards.component.scss
+++ b/angular/src/app/components/event-cards/event-cards.component.scss
@@ -9,7 +9,7 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
         font-weight: 700;
-        font-size: 40px;
+        font-size: 2.5rem;
         line-height: 130%;
         margin-left: 240px;
         margin-top: 200px;
@@ -35,7 +35,7 @@
                 border-right: 1px solid #7589ff;
 
                 font-weight: 600;
-                font-size: 32px;
+                font-size: 2rem;
                 line-height: 130%;
 
                 margin-bottom: -0.5rem;
@@ -78,13 +78,13 @@
                 }
 
                 .city {
-                    font-size: 16px;
+                    font-size: 1rem;
                     padding-left: 12px;
                     margin-bottom: 0px !important;                 
                 }
                 .street {
                     font-weight: 400;
-                    font-size: 16px;
+                    font-size: 1rem;
                     color: #615f69;
                     padding-bottom: 12px;
                     padding-left: 12px;
@@ -111,7 +111,7 @@
     padding: 30px 0 30px 0;
     width: 1000px;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 130%;
 
     letter-spacing: 0.72px;
@@ -146,7 +146,7 @@ button {
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            font-size: 24px;
+            font-size: 1.5rem;
             width: 312px;
             margin-bottom: 60px;
             margin-left: 24px;
@@ -156,7 +156,7 @@ button {
             grid-template-columns: auto;
             .card {
                 h3 {
-                    font-size: 32px;
+                    font-size: 2rem;
                 }
                 margin-left: -100px;
                 width: 342px;
@@ -166,18 +166,18 @@ button {
 
                     .data {
                         font-weight: 600;
-                        font-size: 88px;
+                        font-size: 5.5rem;
                         line-height: 130%;
                     }
                     .data-mid {
                         font-weight: 600;
-                        font-size: 88px;
+                        font-size: 5.5rem;
                         line-height: 130%;
                     }
 
                     .hour {
                         font-weight: 500;
-                        font-size: 22px;
+                        font-size: 1.375rem;
                         line-height: 130%;
 
                         letter-spacing: 0.72px;
@@ -185,7 +185,7 @@ button {
                     }
                     .city {
                         font-weight: 400;
-                        font-size: 18px;
+                        font-size: 1.125rem;
                         line-height: 150%;
                         letter-spacing: 0.72px;
                         padding-top: 12px;
@@ -196,7 +196,7 @@ button {
                         padding-bottom: 12px;
                         padding-left: 12px;
                         font-weight: 400;
-                        font-size: 18px;
+                        font-size: 1.125rem;
                         line-height: 150%;
                         letter-spacing: 0.72px;
                     }
@@ -220,7 +220,7 @@ button {
     button {
         width: 264px;
         font-weight: 500;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 21px;
         letter-spacing: 0.06em;
     }
