--- a/angular/src/app/components/form/form.component.scss
+++ b/angular/src/app/components/form/form.component.scss
@@ -14,7 +14,7 @@
             background-clip: text;
 
             font-weight: 700;
-            font-size: 40px;
+            font-size: 2.5rem;
             line-height: 130%;
             margin-bottom: 82px;
             letter-spacing: 0.02em;
@@ -23,7 +23,7 @@
         .conect{
             width: 400px;
             font-weight: 400;
-            font-size: 20px;
+            font-size: 1.25rem;
             line-height: 130%;
             letter-spacing: 0.72px;
         }
@@ -46,7 +46,7 @@
         margin-left: 200px;
         p{
             font-weight: 400;
-            font-size: 24px;
+            font-size: 1.5rem;
             line-height: 33px;
             letter-spacing: 0.72px;
             margin-bottom: 74px;
@@ -114,14 +114,14 @@ button{
         .title-icons{
             .title{
                 font-weight: 700;
-                font-size: 24px;
+                font-size: 1.5rem;
                 line-height: 130%;
 
                 letter-spacing: 0.02em;
                 margin-bottom: 24px;
             }
             .conect{
-                font-size: 20px;
+                font-size: 1.25rem;
                 margin-bottom: 60px;
             }
         }
@@ -129,7 +129,7 @@ button{
             margin-left: 0px;
             p{
                 margin-top: 58px;
-                font-size: 20px;
+                font-size: 1.25rem;
                 margin-bottom: 56px;
             }
         }
