--- a/angular/src/app/components/partners/partners.component.html
+++ b/angular/src/app/components/partners/partners.component.html
@@ -3,13 +3,19 @@
         <h1>NOSSOS PARCEIROS</h1>
         <div class="grid">
             <div class="card">	
-                <img src="../../../assets/images/Vector.svg" alt="">
+                <div class="card2">	
+                    <img src="../../../assets/images/Vector.svg" alt="">
+                </div>
+            </div>
+            <div class="card">
+                <div class="card2">	
+                    <img src="../../../assets/images/fundacaoinovaprudente.svg" alt="">
+                </div>
             </div>
             <div class="card">	
-                <img src="../../../assets/images/fundacaoinovaprudente.svg" alt="">
-            </div>
-            <div class="card">	
-                <p>novo parceiro</p>
+                <div class="card2">	
+                    <p>novo parceiro</p>
+                </div>
             </div>
             <div class="card">	
                 <p>novo parceiro</p>
