--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -4,12 +4,12 @@
         padding: 0;
     }
     .partners-container{
-        padding-left: 240px;
+        padding-left: 22vw;
         h1{
             letter-spacing: 0.16em;
             text-transform: uppercase;
             font-weight: 700;
-            font-size: 40px;
+            font-size: 2.5rem;
             margin-bottom: 66px;       
             background: linear-gradient(91.06deg, #ffffff 2.26%, #7589FF 20.78%);
             -webkit-background-clip: text;
@@ -25,31 +25,36 @@
                 background-image: url(../../../assets/images/background-image/Group.png);
                 background-color: #010814;
                 margin: 1.7rem;
-                width: 100%;
-                height: 100%;
+                padding: 2rem;
                 background-repeat: no-repeat;
 
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                
-                color: white;
-                p{
-                    text-transform: uppercase;
-                    background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                    background-clip: text;
-                    text-fill-color: transparent;
-                    font-weight: 700;
-                    font-size: 1.5rem;
-                    line-height: 130%;
-                    letter-spacing: 0.16em;
-                    padding: 2rem;
-                }
-                img{
-                    width: 70%;
+                .card2{
+                    width: 100%;
+                    height: 100%;
+                    background-repeat: no-repeat;
+
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    
+                    color: white;
+                    p{
+                        text-transform: uppercase;
+                        background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 80.78%);
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                        background-clip: text;
+                        text-fill-color: transparent;
+                        font-weight: 700;
+                        font-size: 1.5rem;
+                        line-height: 130%;
+                        letter-spacing: 0.16em;
+                        padding: 2rem;
+                    }
+                    img{
+                        width: 70%;
+                    }
                 }
             }
         }
@@ -99,7 +104,7 @@
                 background-clip: text; 
 
                 font-weight: 700;
-                font-size: 24px;
+                font-size: 1.5rem;
                 letter-spacing: 0.16em;
                 margin-bottom: 60px;
             }
