--- a/angular/src/app/components/reload/reload.component.scss
+++ b/angular/src/app/components/reload/reload.component.scss
@@ -9,7 +9,7 @@
         background-clip: text;
         
         font-weight: 700;
-        font-size: 40px;
+        font-size: 2.5rem;
         margin-bottom: 41px;
         letter-spacing: 1em;
     }
@@ -18,9 +18,9 @@
         background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 70.78%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-size: 32px;
+        font-size: 2rem;
         font-weight: 600;
-        font-size: 32px;
+        font-size: 2rem;
         line-height: 130%;
         letter-spacing: 0.12em;
     }
@@ -39,7 +39,7 @@
     h3{
         -webkit-text-stroke: 1px #7589FF;
         color: transparent;
-        font-size: 158px;
+        font-size: 9.875rem;
         letter-spacing: 0.4em;
     }
 
@@ -61,7 +61,7 @@
         margin-top: 65px;
         padding: 16px 24px;
         gap: 30px;
-        font-size: 18px;
+        font-size: 1.125rem;
 
     
         width: 348px;
@@ -99,7 +99,7 @@
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 width: 400px;
-                font-size: 24px;
+                font-size: 1.5rem;
             }
             
             .meetuos{
@@ -107,7 +107,7 @@
                 grid-template-columns: auto;
                 margin-bottom: 92px;
                     p{
-                        font-size: 15px;
+                        font-size: 0.938rem;
                         letter-spacing: 0.72px;
                         width: 90%;
                     }
@@ -123,7 +123,7 @@
             .divpodcast{
                 margin-left: 0;
                     p{
-                        font-size: 15px;
+                        font-size: 0.938rem;
                         letter-spacing: 0.72px;
                         width: 90%;
                         margin-bottom: 81px;
