--- a/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
+++ b/angular/src/app/components/be-part-of-it/be-part-of-it.component.scss
@@ -76,6 +76,8 @@
 
 @media screen and (max-width: 800px) {
     .be-part{
+        padding-left: 3vw;
+        padding-right: 3vw;
         h2{
             font-weight: 700;
             font-size: 1.25rem;
