--- a/angular/src/app/components/footer/footer.component.scss
+++ b/angular/src/app/components/footer/footer.component.scss
@@ -7,7 +7,7 @@
     border-image: linear-gradient(to right, #77A5FA, #FF1CF7);
     border-image-slice: 1;
 
-    padding-left: 252px;
+    padding-left: 12vw;
     padding-top: 68px;
 
     .flex{
@@ -58,7 +58,7 @@
 
 @media screen and (max-width: 800px) {
     .footer{
-        padding-left: 24px;
+        padding-left: 3vw;
         grid-template-columns: auto;
         display: flex;
         flex-direction: row;
