--- a/angular/src/app/components/partners/partners.component.scss
+++ b/angular/src/app/components/partners/partners.component.scss
@@ -95,7 +95,7 @@
 @media screen and (max-width: 800px) {
     .partners{
         .partners-container{
-            padding-left: 24px;
+            padding-left: 3vw;
             padding-right: 24px;
             h1{
                 background: linear-gradient(91.06deg, #ffffff 2.26%, #7589FF 80.78%);
