--- a/angular/src/app/components/reload/reload.component.scss
+++ b/angular/src/app/components/reload/reload.component.scss
@@ -88,12 +88,15 @@
     .flex{
         display: flex;
     }
+    .reload-img{
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 800px) {
     .reload-app{
         .reload-app-content{
-            padding-left: 24px;
+            padding-left: 3vw;
             h1{
                 background: linear-gradient(91.06deg, #FFFFFF 2.26%, #7589FF 50.78%);
                 -webkit-background-clip: text;
